# Northstar

./: .gitignore  README.md  powershell_commands.js
backend/: CLAUDE.md  Dockerfile  NOTIFICATION_SETUP.md  README.md  create-lambda-role.sh  deploy.sh  lambda-execution-role-policy.json  list_ecr_repos.sh  notification.txt  permissions.json  permissions.txt  pyproject.toml  secondary_permissions.json
backend/northstar_backend/: email.py  email_lambda.py  push_notifications.py  sms_notifications.py
backend/tests/: __init__.py  trigger_lambda.py
example/my-app/: package-lock.json
server/: pyproject.toml
ui/: .gitignore  .prettierrc  CLAUDE.md  README.md  app.json  babel.config.js  eslint.config.mjs  metro.config.js  package-lock.json  package.json  requirements.txt  tsconfig.scripts.json
ui/.expo/types/: router.d.ts
ui/app/: _layout.tsx  app.tsx
ui/components/: ConstellationGraph.tsx  ConstellationView.tsx  ErrorMessage.tsx  QuestGraph.tsx  QuestList.tsx  StarEditPanel.tsx  TodoGraph.tsx  WaypointEditPanel.tsx
ui/data/: quests.ts  seedData.ts
ui/docs/: todo.txt
ui/lib/: graphTypes.ts  graphUtils.ts  layoutUtils.ts  types.ts  utils.ts  utils.tsx
ui/navigation/: CustomDrawerContent.tsx
ui/screens/: QuestConstellationScreen.tsx  WaypointsForm.tsx  WaypointsScreen.components.tsx  WaypointsScreen.hooks.ts  WaypointsScreen.styles.ts  WaypointsScreen.tsx
ui/scripts/: dynamo-manager.ts  dynamo-viewer.ts  test-dynamodb.ts  test-migration.ts
ui/services/: data.service.ts  dynamodb.service.ts  sync.service.ts
ui/storage/: localStorage.ts
(+2 files in other folders)
